--- a/css/style.css
+++ b/css/style.css
@@ -367,8 +367,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 2%;
   width: 100%;
-  height: 10%;
+  height: 6%;
   font-weight: bold;
   font-size: 24px;
   line-height: 29px;
@@ -389,7 +390,9 @@ body {
   font-weight: bold;
   font-size: 48px;
   line-height: 59px;
-  color: #204B89;
+  background: linear-gradient(109.01deg, #204B89 33%, #498EF2 66%, #498EF2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .page__prices .donate-container .donate-block__vip .select {
   position: relative;
@@ -398,7 +401,6 @@ body {
   min-width: 220px;
   width: 90%;
   max-width: 400px;
-  margin-bottom: 100%;
   height: 7%;
   background: #12161C;
   border-radius: 10px;
@@ -494,13 +496,13 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
-  height: 5%;
+  height: 3%;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
   color: #8B929A;
-  margin-top: -100%;
+  margin-top: 5%;
   margin-left: 5.3%;
 }
 .page__prices .donate-container .donate-block__vip .privilege-vip__list {
@@ -515,18 +517,97 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: -98%;
+  margin-top: 3%;
   margin-right: 20%;
   height: 40%;
 }
 .page__prices .donate-container .donate-block__vip .privilege-vip__list_item {
-  list-style-image: url("/img/plus-list.svg");
+  list-style-image: url("/img/plus-icon_blue.svg");
   list-style-position: outside;
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
   color: #FFFFFF;
+}
+.page__prices .donate-container .donate-block__vip .line {
+  margin-left: 5%;
+  width: 342px;
+  height: 0px;
+  border: 1px solid #464C54;
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+.page__prices .donate-container .donate-block__vip .privilege__more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  color: #8B929A;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: 4%;
+}
+.page__prices .donate-container .donate-block__vip .privilege__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 44px;
+  width: 100%;
+}
+.page__prices .donate-container .donate-block__vip .privilege__price p {
+  color: #BF9140;
+}
+.page__prices .donate-container .donate-block__vip .privilege__buy_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 3% 5%;
+  padding: 5px 160px;
+  top: 20px;
+  width: 342px;
+  height: 55px;
+  color: #fff;
+  background: linear-gradient(90.38deg, #245293 0%, #4485E4 100%);
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+}
+.page__prices .donate-container .donate-block__vip .privilege__buy_btn:hover {
+  -webkit-box-shadow: 0px 0px 50px #204B89;
+          box-shadow: 0px 0px 50px #204B89;
 }
 .page__prices .donate-container .donate-block__admin {
   display: -webkit-box;
@@ -551,8 +632,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 2%;
   width: 100%;
-  height: 10%;
+  height: 6%;
   font-weight: bold;
   font-size: 24px;
   line-height: 29px;
@@ -573,16 +655,17 @@ body {
   font-weight: bold;
   font-size: 48px;
   line-height: 59px;
-  color: #bb4408;
+  background: linear-gradient(109.01deg, #CE4A08 33%, #F79D01 66%, #F79D01);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .page__prices .donate-container .donate-block__admin .select {
   position: relative;
   display: block;
-  margin-left: 10%;
+  margin-left: 5%;
   min-width: 220px;
-  width: 80%;
+  width: 90%;
   max-width: 400px;
-  margin-bottom: 100%;
   height: 7%;
   background: #12161C;
   border-radius: 10px;
@@ -678,13 +761,13 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
-  height: 5%;
+  height: 3%;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
   color: #8B929A;
-  margin-top: -100%;
+  margin-top: 5%;
   margin-left: 5.3%;
 }
 .page__prices .donate-container .donate-block__admin .privilege-admin__list {
@@ -699,16 +782,95 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: -98%;
-  margin-right: 12%;
+  margin-top: 3%;
+  margin-right: 10%;
   height: 40%;
 }
 .page__prices .donate-container .donate-block__admin .privilege-admin__list_item {
-  list-style-image: url("/img/plus-list.svg");
+  list-style-image: url("/img/plus-icon_red.svg");
   list-style-position: outside;
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
   color: #FFFFFF;
+}
+.page__prices .donate-container .donate-block__admin .line {
+  margin-left: 5%;
+  width: 342px;
+  height: 0px;
+  border: 1px solid #464C54;
+  margin-top: 3%;
+  margin-bottom: 2%;
+}
+.page__prices .donate-container .donate-block__admin .privilege__more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  color: #8B929A;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: 4%;
+}
+.page__prices .donate-container .donate-block__admin .privilege__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 44px;
+  width: 100%;
+}
+.page__prices .donate-container .donate-block__admin .privilege__price p {
+  color: #BF9140;
+}
+.page__prices .donate-container .donate-block__admin .privilege__buy_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 3% 5%;
+  padding: 5px 160px;
+  top: 20px;
+  width: 342px;
+  height: 55px;
+  color: #fff;
+  background: linear-gradient(90.38deg, #D55707 0%, #F59902 100%);
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+}
+.page__prices .donate-container .donate-block__admin .privilege__buy_btn:hover {
+  -webkit-box-shadow: 0px 0px 50px #D55707;
+          box-shadow: 0px 0px 50px #D55707;
 }
