--- a/css/style.scss
+++ b/css/style.scss
@@ -241,8 +241,9 @@ body {
                 flex-wrap: wrap;
                 justify-content: center;
                 align-items: center;
+                margin-top: 2%;
                 width: 100%;
-                height: 10%;
+                height: 6%;
                 font-weight: bold;
                 font-size: 24px;
                 line-height: 29px;
@@ -258,7 +259,9 @@ body {
                 font-weight: bold;
                 font-size: 48px;
                 line-height: 59px;
-                color: #204B89;
+                background: linear-gradient(109.01deg, #204B89 33%, #498EF2 66%, #498EF2);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             }
             .select {
                 position: relative;
@@ -267,7 +270,6 @@ body {
                 min-width: 220px;
                 width: 90%;
                 max-width: 400px;
-                margin-bottom: 100%;
                 height: 7%;
                 background: #12161C;
                 border-radius: 10px;
@@ -350,13 +352,13 @@ body {
                 align-items: center;
                 flex-wrap: wrap;
                 width: 100%;
-                height: 5%;
+                height: 3%;
                 font-style: normal;
                 font-weight: 500;
                 font-size: 18px;
                 line-height: 22px;
                 color: #8B929A;
-                margin-top: -100%;
+                margin-top: 5%;
                 margin-left: 5.3%;
             }
             .privilege-vip__list {
@@ -364,11 +366,11 @@ body {
                 align-items: center;
                 flex-wrap: wrap;
                 justify-content: center;
-                margin-top: -98%;
+                margin-top: 3%;
                 margin-right: 20%;
                 height: 40%;
                 &_item {
-                    list-style-image: url("/img/plus-list.svg");
+                    list-style-image: url("/img/plus-icon_blue.svg");
                     list-style-position: outside;
                     font-style: normal;
                     font-weight: 600;
@@ -376,6 +378,63 @@ body {
                     line-height: 22px;
                     color: #FFFFFF;
                 }
+            }
+            .line {
+                margin-left: 5%;
+                width: 342px;
+                height: 0px;
+                border: 1px solid #464C54;
+                margin-top: 3%;
+                margin-bottom: 2%;
+            }
+            .privilege__more {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                color: #8B929A;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 17px;
+                margin-bottom: 4%;
+            }
+            .privilege__price {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                color: #fff;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 36px;
+                line-height: 44px;
+                width: 100%;
+                p {
+                    color: $orangeColor;
+                }
+            }
+            .privilege__buy_btn {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                justify-content: center;
+                margin: 3% 5%;
+                padding: 5px 160px;
+                top: 20px;
+                width: 342px;
+                height: 55px;
+                color: #fff;
+                background: $blueGradientColor;
+                border-radius: 5px;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 29px;
+            }
+            .privilege__buy_btn:hover {
+                box-shadow: 0px 0px 50px #204B89;
             }
         }
         .donate-block__admin {
@@ -390,8 +449,9 @@ body {
                 flex-wrap: wrap;
                 justify-content: center;
                 align-items: center;
+                margin-top: 2%;
                 width: 100%;
-                height: 10%;
+                height: 6%;
                 font-weight: bold;
                 font-size: 24px;
                 line-height: 29px;
@@ -407,16 +467,17 @@ body {
                 font-weight: bold;
                 font-size: 48px;
                 line-height: 59px;
-                color: #bb4408;
+                background: linear-gradient(109.01deg, #CE4A08 33%, #F79D01 66%, #F79D01);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             }
             .select {
                 position: relative;
                 display: block;
-                margin-left: 10%;
+                margin-left: 5%;
                 min-width: 220px;
-                width: 80%;
+                width: 90%;
                 max-width: 400px;
-                margin-bottom: 100%;
                 height: 7%;
                 background: #12161C;
                 border-radius: 10px;
@@ -499,13 +560,13 @@ body {
                 align-items: center;
                 flex-wrap: wrap;
                 width: 100%;
-                height: 5%;
+                height: 3%;
                 font-style: normal;
                 font-weight: 500;
                 font-size: 18px;
                 line-height: 22px;
                 color: #8B929A;
-                margin-top: -100%;
+                margin-top: 5%;
                 margin-left: 5.3%;
             }
             .privilege-admin__list {
@@ -513,11 +574,11 @@ body {
                 align-items: center;
                 flex-wrap: wrap;
                 justify-content: center;
-                margin-top: -98%;
-                margin-right: 12%;
+                margin-top: 3%;
+                margin-right: 10%;
                 height: 40%;
                 &_item {
-                    list-style-image: url("/img/plus-list.svg");
+                    list-style-image: url("/img/plus-icon_red.svg");
                     list-style-position: outside;
                     font-style: normal;
                     font-weight: 600;
@@ -525,6 +586,63 @@ body {
                     line-height: 22px;
                     color: #FFFFFF;
                 }
+            }
+            .line {
+                margin-left: 5%;
+                width: 342px;
+                height: 0px;
+                border: 1px solid #464C54;
+                margin-top: 3%;
+                margin-bottom: 2%;
+            }
+            .privilege__more {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                color: #8B929A;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 17px;
+                margin-bottom: 4%;
+            }
+            .privilege__price {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                color: #fff;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 36px;
+                line-height: 44px;
+                width: 100%;
+                p {
+                    color: $orangeColor;
+                }
+            }
+            .privilege__buy_btn {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                justify-content: center;
+                margin: 3% 5%;
+                padding: 5px 160px;
+                top: 20px;
+                width: 342px;
+                height: 55px;
+                color: #fff;
+                background: $orangeGradientColor;
+                border-radius: 5px;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 29px;
+            }
+            .privilege__buy_btn:hover {
+                box-shadow: 0px 0px 50px #D55707;
             }
         }
     }
