--- a/css/style.css
+++ b/css/style.css
@@ -78,10 +78,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Montserrat;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   overflow-x: hidden;
   z-index: -2;
-  background: #09111B;
+  background-image: url("/img/bg.png");
   height: 4500px;
 }
 
@@ -533,12 +537,13 @@ body {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
   margin-top: 3%;
-  margin-right: 20%;
+  margin-left: 7%;
   height: 40%;
+  width: 90%;
 }
 .page__prices .donate-container .donate-block__vip .privilege-vip__list_item {
   list-style-image: url("/img/plus-icon_blue.svg");
@@ -800,16 +805,17 @@ body {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
   margin-top: 3%;
-  margin-right: 10%;
+  margin-left: 7.5%;
   height: 40%;
+  width: 90%;
 }
 .page__prices .donate-container .donate-block__admin .privilege-admin__list_item {
   list-style-image: url("/img/plus-icon_red.svg");
-  list-style-position: outside;
+  list-style-position: inside;
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
@@ -1079,9 +1085,11 @@ body {
   padding: 30px 10px;
 }
 .popup .popup__content {
-  background-color: #ffffff;
-  color: #000;
+  background-color: #172536;
+  color: #fff;
   max-width: 800px;
+  width: 35%;
+  height: 70%;
   padding: 30px;
   position: relative;
   -webkit-transition: all 0.8s ease 0s;
@@ -1089,13 +1097,84 @@ body {
   opacity: 0;
   -webkit-transform: translate(0px, -100%);
           transform: translate(0px, -100%);
+  border-radius: 20px;
 }
 .popup .popup__close {
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 12px;
+  top: 12px;
 }
-.popup .popup__title {
-  font-size: 40px;
+.popup .popup__title_vip {
   margin: 0px 0px 1em 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 10%;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 59px;
+  background: linear-gradient(109.01deg, #204B89 33%, #498EF2 66%, #498EF2);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.popup .privilege-vip__list {
+  margin-top: 3%;
+  height: 80%;
+  width: 100%;
+}
+.popup .privilege-vip__list_item {
+  list-style-image: url("/img/plus-icon_blue.svg");
+  margin-left: 5%;
+  margin-top: 3%;
+  list-style-position: inside;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #fff;
+}
+.popup .popup__title_admin {
+  margin: 0px 0px 1em 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 10%;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 59px;
+  background: linear-gradient(109.01deg, #CE4A08 33%, #F79D01 66%, #F79D01);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.popup .privilege-admin__list {
+  margin-top: 3%;
+  height: 80%;
+  width: 100%;
+}
+.popup .privilege-admin__list_item {
+  list-style-image: url("/img/plus-icon_red.svg");
+  margin-left: 5%;
+  margin-top: 3%;
+  list-style-position: outside;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #fff;
 }
