--- a/css/style.scss
+++ b/css/style.scss
@@ -23,11 +23,16 @@ $orangeGradientColor: linear-gradient(90.38deg, #D55707 0%, #F59902 100%);
 * {
     font-family: $ff;
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     overflow-x: hidden;
     z-index: -2;
-    // background-image: url("/img/bg.png");
-    background: #09111B;;
+    background-image: url("/img/bg.png");
+    // background: #09111B;
     height: 4500px;
 
 }
@@ -377,10 +382,11 @@ body {
                 display: flex;
                 align-items: center;
                 flex-wrap: wrap;
-                justify-content: center;
+                justify-content: start;
                 margin-top: 3%;
-                margin-right: 20%;
+                margin-left: 7%;
                 height: 40%;
+                width: 90%;
                 &_item {
                     list-style-image: url("/img/plus-icon_blue.svg");
                     list-style-position: outside;
@@ -586,13 +592,14 @@ body {
                 display: flex;
                 align-items: center;
                 flex-wrap: wrap;
-                justify-content: center;
+                justify-content: start;
                 margin-top: 3%;
-                margin-right: 10%;
+                margin-left: 7.5%;
                 height: 40%;
+                width: 90%;
                 &_item {
                     list-style-image: url("/img/plus-icon_red.svg");
-                    list-style-position: outside;
+                    list-style-position: inside;
                     font-style: normal;
                     font-weight: 600;
                     font-size: 18px;
@@ -795,26 +802,86 @@ body {
         padding: 30px 10px;
     }
     .popup__content {
-        background-color: #ffffff;
-        color: #000;
+        background-color: #172536;
+        color: #fff;
         max-width: 800px;
+        width: 35%;
+        height: 70%;
         padding: 30px;
         position: relative;
         transition: all 0.8s ease 0s;
         opacity: 0;
         transform: translate(0px, -100%);
+        border-radius: 20px;
     }
     .popup__close {
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 12px;
+        top: 12px;
     }
-    .popup__title {
-        font-size: 40px;
+    .popup__title_vip {
         margin: 0px 0px 1em 0px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+        height: 10%;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 59px;
+        background: linear-gradient(109.01deg, #204B89 33%, #498EF2 66%, #498EF2);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
-    .popup__text {
-
+    .privilege-vip__list {
+        margin-top: 3%;
+        // margin-right: 20%;
+        height: 80%;
+        width: 100%;
+        &_item {
+            list-style-image: url("/img/plus-icon_blue.svg");
+            margin-left: 5%;
+            margin-top: 3%;
+            list-style-position: inside;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 22px;
+            color: #fff;
+        }
+    }
+    .popup__title_admin {
+        margin: 0px 0px 1em 0px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+        height: 10%;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 59px;
+        background: linear-gradient(109.01deg, #CE4A08 33%, #F79D01 66%, #F79D01);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    .privilege-admin__list {
+        margin-top: 3%;
+        // margin-right: 20%;
+        height: 80%;
+        width: 100%;
+        &_item {
+            list-style-image: url("/img/plus-icon_red.svg");
+            margin-left: 5%;
+            margin-top: 3%;
+            list-style-position: outside;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 22px;
+            color: #fff;
+        }
     }
 }
 
