--- a/css/style.css
+++ b/css/style.css
@@ -197,10 +197,13 @@ body {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 2% 0;
   padding: 5px 160px;
   top: 20px;
-  width: 441px;
+  width: 70%;
   height: 70px;
   color: #fff;
   background: linear-gradient(90.38deg, #245293 0%, #4485E4 100%);
@@ -1257,4 +1260,77 @@ body {
 .popup .popup__admin_rule .popup__criteria_text {
   margin-top: 2%;
   color: #CE4A08;
+}
+
+@media (max-width: 1341px) {
+  .header__menu .header__logo {
+    visibility: hidden;
+  }
+  .header__menu .menu__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    position: absolute;
+    z-index: 1;
+  }
+  .header__menu .menu__list._scroll {
+    visibility: visible;
+    background: rgba(255, 255, 255, 0);
+  }
+  .header__menu .menu__list .menu__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .page__main-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 10%;
+  }
+  .page__main-block .page__main-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    background: #000;
+    width: 38%;
+    height: 25%;
+    margin-left: 5rem;
+  }
+  .page__main-block .page__main-text_title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: 3rem;
+  }
+  .page__main-block .page__main-text .page__main_btn {
+    width: 100%;
+    height: 70px;
+  }
+  .page__main-block .page__main-img {
+    width: 30%;
+    height: 30%;
+    z-index: -1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: 20%;
+    background: #000;
+  }
 }
