--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 /*Обнуление*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap");
-@import '../css/media.css';
 * {
   padding: 0;
   margin: 0;
@@ -87,9 +86,24 @@ body {
   overflow-x: hidden;
   z-index: -2;
   background-image: url("../img/bg.png");
-  height: 4500px;
+  height: 100%;
 }
 
+.header__menu {
+  z-index: 40;
+  position: fixed;
+  width: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.header__menu._scroll {
+  background: #12161C;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border-bottom: 1px solid #8B929A;
+}
 .header__menu .header__logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -97,9 +111,12 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 75px;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 15%;
   height: 134px;
   margin-left: 9%;
   z-index: 1;
@@ -120,15 +137,8 @@ body {
   margin-left: 34.4%;
   position: fixed;
   z-index: 50;
-  top: 5%;
+  top: 5.5%;
   border-radius: 10px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-.header__menu .menu__list._scroll {
-  background: #204B89;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
 }
 .header__menu .menu__list .menu__item {
   display: -webkit-box;
@@ -1034,6 +1044,7 @@ body {
   margin-top: 12%;
   height: 2%;
   background: #172536;
+  height: 12%;
 }
 .page__footer_title {
   font-style: normal;
@@ -1261,4 +1272,71 @@ body {
 .popup .popup__admin_rule .popup__criteria_text {
   margin-top: 2%;
   color: #CE4A08;
+}
+
+@media (max-width: 1341px) {
+  .header__menu {
+    top: 0px;
+  }
+  .header__menu .menu__list {
+    width: 50%;
+  }
+
+  .page__main-block {
+    margin-top: 10%;
+  }
+  .page__main-block .page__main-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 38%;
+    height: 25%;
+    margin-left: 5rem;
+  }
+  .page__main-block .page__main-text_title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: 3rem;
+  }
+  .page__main-block .page__main-text .page__main_btn {
+    width: 100%;
+    height: 70px;
+  }
+  .page__main-block .page__main-img {
+    width: 30%;
+    height: 30%;
+    z-index: -1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: 13rem;
+  }
+
+  .page__rules .page__rules_title {
+    font-size: 245px;
+    line-height: 291px;
+  }
+  .page__rules .rules__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .page__prices .price__title {
+    font-size: 245px;
+    line-height: 291px;
+  }
 }
