--- a/css/style.scss
+++ b/css/style.scss
@@ -33,15 +33,26 @@ body {
     z-index: -2;
     background-image: url("../img/bg.png");
     // background: #09111B;
-    height: 4500px;
+    height: 100%;
 
 }
 .header__menu { 
+    z-index: 40;
+    position: fixed;
+    width: 100%;
+    transition: 0.5s;
+    flex-wrap: wrap;
+    &._scroll {
+        background: #12161C;
+        transition: 0.5s;
+        border-bottom: 1px solid $greyColor;
+    }
     .header__logo {
         display: flex;
         align-items: center;
-        flex-wrap: wrap;
-        width: 75px;
+        flex-wrap: nowrap;
+        justify-content: center;
+        width: 15%;
         height: 134px;
         margin-left: 9%;
         z-index: 1;
@@ -57,13 +68,8 @@ body {
         margin-left: 34.4%;
         position: fixed;
         z-index: 50;
-        top: 5%;
+        top: 5.5%;
         border-radius: 10px;
-        transition: 0.5s;
-        &._scroll {
-            background: #204B89;
-            transition: 0.5s;
-        }
         .menu__item {
             display: flex;
             align-items: center;
@@ -758,6 +764,7 @@ body {
     margin-top: 12%;
     height: 2%;
     background: #172536;
+    height: 12%;
     &_title {
         font-style: normal;
         font-weight: normal;
@@ -937,13 +944,84 @@ body {
 }
 
 
+//<media>==================================================
+@media (max-width: 1341px) {
+    .header__menu { 
+        top: 0px;
+        .header__logo {
+            // visibility: hidden;
+        }
+        .menu__list {
+           width: 50%;
+        }
+    }
+    .page__main-block {
+        margin-top: 10%;
+        .page__main-text {
+            display: flex;
+            flex-wrap: wrap;
+            width: 38%;
+            height: 25%;
+            margin-left: 5rem;
+            &_title {
+                display: flex;
+                flex-wrap: wrap;
+                margin-bottom: 3rem;
+            }
+            .page__main_btn {
+                width: 100%;
+                height: 70px;
+            }
+        }
+        .page__main-img {
+            width: 30%;
+            height: 30%;
+            z-index: -1;
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: 13rem;
+        }
+    }
+    .page__rules {
+        .page__rules_title {
+            font-size: 245px;
+            line-height: 291px;
+        }
+        .rules__container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    .page__prices {
+        .price__title {
+            font-size: 245px;
+            line-height: 291px;
+        }
+    }
+}
 
+@media (min-width: 576px) and (max-width: 767.98px) {
+   
+}
 
+@media (min-width: 768px) and (max-width: 991.98px) {
+    
+   
+}
 
+@media (min-width: 992px) and (max-width: 1431.98px) {
+   
+}
 
-@import '../css/media.css';
+@media (min-width: 1800px) and (max-width: 2100px) {
 
+}
 
+@media (min-width: 2101px) {
+ 
+}
+//</media>==================================================
 
 
 
